# azure-monitor-opencensus-python

./: .gitignore  README.md  setup.cfg  setup.py
azure_monitor/: README.md  env.template  readme.md
azure_monitor/artifacts/: common.ps1  parameters.json  setup.ps1  template.json
azure_monitor/azfunc_sample/: .flake8  .funcignore  .test.env  README.md  local.settings.json  pytest.ini  requirements.txt
azure_monitor/azfunc_sample/MyHttpFunction/: function.json
azure_monitor/azfunc_sample/instrumentation/: __init__.py  globals.py  instrumentation_func.py  main.py
azure_monitor/azfunc_sample/opencensus-azfunc-sample/: __init__.py  greeter_function.py  main.py  utils.py
azure_monitor/django_sample/: README.md  readme.md  requirements.txt
azure_monitor/fastapi_logger_sample/: README.md
azure_monitor/fastapi_logger_sample/opencensus_fastapi_lib_common/: README.md  dev-requirements.txt  pyproject.toml
azure_monitor/fastapi_logger_sample/opencensus_fastapi_lib_common/src/instrumentation/: __init__.py
azure_monitor/fastapi_logger_sample/opencensus_fastapi_lib_common/src/instrumentation/batch/: __init__.py
azure_monitor/fastapi_logger_sample/opencensus_fastapi_lib_common/src/instrumentation/fastapi/: OpenCensusMiddleware.py  __init__.py
azure_monitor/fastapi_logger_sample/opencensus_fastapi_lib_common/src/instrumentation/task/: __init__.py
azure_monitor/fastapi_logger_sample/opencensus_fastapi_lib_common/tests/: FastApiTest.py  TaskTest.py  TestLogger.py
azure_monitor/flask_sample/: README.md  __init__.py  command.py  config.py  endpoint.py  requirements.txt  sample.py
azure_monitor/flask_sample/app/: __init__.py  (+3 more)
azure_monitor/python_logger_opencensus_azure/: README.md
azure_monitor/simple_sample/: database.py  metric.py  metric2.py  module1.py  module2.py  prompt.py  readme.md  spanComplex.py  spanSimple.py  trace.py
docs_samples/: 01_python_app_insights_overview.md  02_python_app_insights_dependencies.md  03_python_app_custom_metrics.md  setup.ps1
docs_samples/Artifacts/: template.json
docs_samples/Functions/: local.settings.json  requirements.txt
docs_samples/SimpleApps/: customDimensions.py  event.py  exception.py  functions.py  metric.py  prompt.py  spanSimple.py
docs_samples/WebSample/: .env.example  .gitignore  README.md  manage.py  requirements.txt
(+53 files in other folders)
